Bug 103502 - Node::compareDocumentPosition returns wrong value for a node in the different shadow tree.
Summary: Node::compareDocumentPosition returns wrong value for a node in the different...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hayato Ito
URL:
Keywords:
Depends on:
Blocks: 72352
  Show dependency treegraph
 
Reported: 2012-11-28 04:01 PST by Hayato Ito
Modified: 2012-11-28 20:56 PST (History)
3 users (show)

See Also:


Attachments
Fix Node::compareDocumentPosition for nodes in shadow tree. (7.05 KB, patch)
2012-11-28 05:49 PST, Hayato Ito
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hayato Ito 2012-11-28 04:01:51 PST
According to the spec (http://dom.spec.whatwg.org/#dom-node-comparedocumentposition), if two nodes are not in the same tree, we should return DOCUMENT_POSITION_DISCONNECTED, DOCUMENT_POSITION_IMPLEMENTATION_SPECIFIC.
But the current implementation mays not return that for nodes which are in different shadow trees.
Comment 1 Hayato Ito 2012-11-28 05:49:46 PST
Created attachment 176468 [details]
Fix Node::compareDocumentPosition for nodes in shadow tree.
Comment 2 WebKit Review Bot 2012-11-28 19:18:40 PST
Comment on attachment 176468 [details]
Fix Node::compareDocumentPosition for nodes in shadow tree.

Clearing flags on attachment: 176468

Committed r136087: <http://trac.webkit.org/changeset/136087>
Comment 3 WebKit Review Bot 2012-11-28 19:18:43 PST
All reviewed patches have been landed.  Closing bug.