Node::compareDocumentPosition returns wrong value for a node in the different shadow tree. https://bugs.webkit.org/show_bug.cgi?id=103502

Reviewed by Dimitri Glazkov.

Source/WebCore:

Make Node::compareDocumentPosition() return the correct value when two nodes are in the different shadow trees.

Test: fast/dom/shadow/compare-document-position.html

* dom/Node.cpp:
(WebCore::Node::compareDocumentPosition):

LayoutTests:

* fast/dom/shadow/compare-document-position-expected.txt: Added.
* fast/dom/shadow/compare-document-position.html: Added.


Canonical link: https://commits.webkit.org/121710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136087 268f45cc-cd09-0410-ab3c-d52691b4dbfc